--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        #command: ["/bin/bash", "-c", "exec /usr/sbin/gpsd -N -n -G ${*}","--"]
         ports:
             - 2947:2947
         restart: always
+        entrypoint:
+        - /usr/bin/bash
+        - -c
+        - /init
