--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -1,6 +1,16 @@
 # Drift file to remember clock rate across restarts
 driftfile /var/lib/ntp/ntp.drift
 
+# Leap seconds definition provided by tzdata
+leapfile /usr/share/zoneinfo/leap-seconds.list
+
+# Specify one or more NTP servers.
+
+server time1.google.com iburst prefer preempt noselect
+server time2.google.com iburst prefer preempt noselect
+server time3.google.com iburst prefer preempt noselect
+server time4.google.com iburst prefer preempt noselect
+
 # Kernel-mode PPS reference-clock for the precise seconds
 #
 # Note: when using the ATOM (type 22) refclock, one of the other
@@ -8,17 +18,36 @@ driftfile /var/lib/ntp/ntp.drift
 # supplies the timing within the second, and another server is required to
 # determine the current second.
 
-server 127.127.22.0 minpoll 4 maxpoll 4
+server 127.127.22.0 minpoll 4 maxpoll 4 true
 fudge 127.127.22.0 refid kPPS
 
 # Coarse time reference-clock - nearest second
-server 127.127.28.0 minpoll 4 maxpoll 4 iburst prefer
-fudge 127.127.28.0 time1 +0.105 flag1 1 refid GPSD stratum 1
+server 127.127.28.0 minpoll 4 maxpoll 4 iburst prefer true
+fudge 127.127.28.0 time1 +0.105 flag1 1 stratum 1
 
 # GPS PPS reference (NTP1)
-server 127.127.28.1 prefer
+server 127.127.28.1 minpoll 4 maxpoll 4 iburst prefer true
 fudge 127.127.28.1 refid PPS
 
 # GPS PPS reference (NTP2)
-server 127.127.28.2 prefer
+server 127.127.28.2 minpoll 4 maxpoll 4 iburst prefer true
 fudge 127.127.28.2 refid PPS
+
+# Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
+# details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
+# might also be helpful.
+#
+# Note that "restrict" applies to both servers and clients, so a configuration
+# that might be intended to block requests from certain clients could also end
+# up blocking replies from your own upstream servers.
+
+# By default, exchange time with everybody, but don't allow configuration.
+restrict -4 default kod notrap nomodify nopeer noquery limited
+restrict -6 default kod notrap nomodify nopeer noquery limited
+
+# Local users may interrogate the ntp server more closely.
+restrict 127.0.0.1
+restrict ::1
+
+# Needed for adding pool entries
+restrict source notrap nomodify noquery
