--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -23,7 +23,7 @@ fudge 127.127.22.0 refid kPPS
 
 # Coarse time reference-clock - nearest second
 server 127.127.28.0 minpoll 4 maxpoll 4 iburst prefer true
-fudge 127.127.28.0 time1 +0.105 flag1 1 stratum 1
+fudge 127.127.28.0 time1 +0.105 flag1 1 refid GPS stratum 1
 
 # GPS PPS reference (NTP1)
 server 127.127.28.1 minpoll 4 maxpoll 4 iburst prefer true
