--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 version: "3"
+  volumes:
+    ntp:./vol/docker-gpsd/var/lib/ntp/
 services:
-    gpsd:
-        tty: true
-        build:
-            context: .
-            dockerfile: Dockerfile
-        ports:
-            - 2947:2947
-        restart: always
-        entrypoint:
-        - /bin/bash
-        - -c
-        - /init
-        volumes:
-            - ./vol/docker-gpsd/var/lib/ntp/:/var/lib/ntp/
+  gpsd:
+    tty: true
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 2947:2947
+    restart: always
+    entrypoint:
+    - /bin/bash
+    - -c
+    - /init
+    volumes:
+      - ./vol/docker-gpsd/var/lib/ntp/:/var/lib/ntp/
