Add iburst directive

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -18,7 +18,7 @@ server time4.google.com iburst prefer preempt noselect
 # supplies the timing within the second, and another server is required to
 # determine the current second.
 
-server 127.127.22.0 minpoll 4 maxpoll 4 true
+server 127.127.22.0 minpoll 4 maxpoll 4 iburst true
 fudge 127.127.22.0 refid kPPS
 
 # Coarse time reference-clock - nearest second
