Add additional NTPd source from GPSD as gpsd-json

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -33,6 +33,16 @@ fudge 127.127.28.1 refid PPS
 server 127.127.28.2 minpoll 4 maxpoll 4 iburst prefer true
 fudge 127.127.28.2 refid PPS
 
+#=========================================================
+#  GPSD native ntpd driver
+#=========================================================
+# This driver exists from at least ntp version 4.2.8
+# Details at
+#   https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver46.html
+server 127.127.46.0 
+fudge 127.127.46.0 time1 0.0 time2 0.0 refid GPS
+
+
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
 # details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
 # might also be helpful.
