--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -4,6 +4,9 @@ driftfile /var/lib/ntp/ntp.drift
 # Leap seconds definition provided by tzdata
 leapfile /usr/share/zoneinfo/leap-seconds.list
 
+# Log file
+logfile /var/log/ntp.log
+
 # Specify one or more NTP servers.
 
 server time1.google.com iburst prefer preempt noselect
