--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -43,7 +43,7 @@ fudge 127.127.28.2 refid PPS
 # Details at
 #   https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver46.html
 server 127.127.46.0 minpoll 4 maxpoll 4 iburst prefer true
-fudge 127.127.46.0 time1 0.0 time2 0.0 refid GPS
+fudge 127.127.46.0 time1 0.0 time2 0.0 refid GPS stratum 1
 
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
