Add inline documentation for NTP configuration

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -8,7 +8,23 @@ leapfile /usr/share/zoneinfo/leap-seconds.list
 logfile /var/log/ntp.log
 
 # Specify one or more NTP servers.
+#
 
+# noselect = time source will queried and tracked, but not be used to
+# set system time
+#
+# prefer = all things equal, use this source with a higher priority
+# than the other sources
+#
+# preempt = if the time source isn't reachable, withdraw it from
+# sources being considered
+#
+# true = never withdraw this source from selection consideration
+# even if it is unavailable; continue to retry it each selection
+# cycle
+#
+# noselect used during testing, to compare GPSd time to NTP from
+# their atomic clock  linked NTP servers
 server time1.google.com iburst prefer preempt noselect
 server time2.google.com iburst prefer preempt noselect
 server time3.google.com iburst prefer preempt noselect
