--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -1,3 +1,25 @@
+# Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
+# details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
+# might also be helpful.
+#
+# Note that "restrict" applies to both servers and clients, so a configuration
+# that might be intended to block requests from certain clients could also end
+# up blocking replies from your own upstream servers.
+
+# By default, exchange time with everybody, but don't allow configuration.
+restrict -4 default kod notrap nomodify nopeer noquery limited
+restrict -6 default kod notrap nomodify nopeer noquery limited
+
+# Local users may interrogate the ntp server more closely.
+restrict 127.0.0.1
+restrict ::1
+
+# Needed for adding pool entries
+restrict source notrap nomodify noquery
+
+###############################################################################
+# File Configurations
+###############################################################################
 # Drift file to remember clock rate across restarts
 driftfile /var/lib/ntp/ntp.drift
 
@@ -7,9 +29,24 @@ leapfile /usr/share/zoneinfo/leap-seconds.list
 # Log file
 logfile /var/log/ntp.log
 
-# Specify one or more NTP servers.
-#
+# Statistics Directory
+statsdir /var/log/ntp/
 
+# Key file containing the keys and key identifiers used when operating
+# with symmetric key cryptography.
+keys /etc/ntp/keys
+
+###############################################################################
+# Statistics configuration
+###############################################################################
+statistics loopstats peerstats clockstats
+filegen loopstats file loopstats type day enable
+filegen peerstats file peerstats type day enable
+filegen clockstats file clockstats type day enable
+
+###############################################################################
+# Documentation
+###############################################################################
 # noselect = time source will queried and tracked, but not be used to
 # set system time
 #
@@ -25,6 +62,11 @@ logfile /var/log/ntp.log
 #
 # noselect used during testing, to compare GPSd time to NTP from
 # their atomic clock  linked NTP servers
+
+
+###############################################################################
+# Time sources
+###############################################################################
 server time1.google.com iburst prefer preempt noselect
 server time2.google.com iburst prefer preempt noselect
 server time3.google.com iburst prefer preempt noselect
@@ -62,21 +104,3 @@ server 127.127.46.0 minpoll 4 maxpoll 4 iburst prefer true
 fudge 127.127.46.0 time1 0.0 time2 0.0 refid GPS stratum 1
 
 
-# Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
-# details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
-# might also be helpful.
-#
-# Note that "restrict" applies to both servers and clients, so a configuration
-# that might be intended to block requests from certain clients could also end
-# up blocking replies from your own upstream servers.
-
-# By default, exchange time with everybody, but don't allow configuration.
-restrict -4 default kod notrap nomodify nopeer noquery limited
-restrict -6 default kod notrap nomodify nopeer noquery limited
-
-# Local users may interrogate the ntp server more closely.
-restrict 127.0.0.1
-restrict ::1
-
-# Needed for adding pool entries
-restrict source notrap nomodify noquery
