Prevent NTPd panic when offset greater than 1k sec

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -36,6 +36,10 @@ statsdir /var/log/ntp/
 # with symmetric key cryptography.
 keys /etc/ntp/keys
 
+# Force NTPd to not exit in panic mode when the system time is found to be
+# too far away from an NTP time source
+tinker panic 0
+
 ###############################################################################
 # Statistics configuration
 ###############################################################################
