--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -27,14 +27,14 @@ driftfile /var/lib/ntp/ntp.drift
 leapfile /usr/share/zoneinfo/leap-seconds.list
 
 # Log file
-logfile /var/log/ntp.log
+#logfile /var/log/ntp.log
 
 # Statistics Directory
 statsdir /var/log/ntp/
 
 # Key file containing the keys and key identifiers used when operating
 # with symmetric key cryptography.
-keys /etc/ntp/keys
+#keys /etc/ntp/keys
 
 # Force NTPd to not exit in panic mode when the system time is found to be
 # too far away from an NTP time source
