Cleanup NTP conf

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -1,3 +1,8 @@
+###############################################################################
+#
+#   NTPd Configuration File
+#
+###############################################################################
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
 # details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
 # might also be helpful.
@@ -27,6 +32,7 @@ driftfile /var/lib/ntp/ntp.drift
 leapfile /usr/share/zoneinfo/leap-seconds.list
 
 # Log file
+# commented out so that we get logs to $STDOUT
 #logfile /var/log/ntp.log
 
 # Statistics Directory
@@ -67,7 +73,6 @@ filegen clockstats file clockstats type day enable
 # noselect used during testing, to compare GPSd time to NTP from
 # their atomic clock  linked NTP servers
 
-
 ###############################################################################
 # Time sources
 ###############################################################################
@@ -98,13 +103,12 @@ fudge 127.127.28.1 refid PPS
 server 127.127.28.2 minpoll 4 maxpoll 4 iburst prefer true
 fudge 127.127.28.2 refid PPS
 
-#=========================================================
+###############################
 #  GPSD native ntpd driver
-#=========================================================
+###############################
 # This driver exists from at least ntp version 4.2.8
 # Details at
 #   https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver46.html
+
 server 127.127.46.0 minpoll 4 maxpoll 4 iburst prefer true
 fudge 127.127.46.0 time1 0.0 time2 0.0 refid GPS stratum 1
-
-
