Turn off bclient for NTPd

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -46,6 +46,9 @@ statsdir /var/log/ntp/
 # too far away from an NTP time source
 tinker panic 0
 
+# https://linux.die.net/man/5/ntp_misc
+#enable kernel
+disable bclient
 ###############################################################################
 # Statistics configuration
 ###############################################################################
