--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -102,7 +102,8 @@ server time4.google.com iburst prefer preempt noselect
 # servers must be marked as prefer.  This is because the type 22 clock only
 # supplies the timing within the second, and another server is required to
 # determine the current second.
-
+#
+# Kernel-mode PPS reference-clock for the precise seconds
 server 127.127.22.0 minpoll 4 maxpoll 4 iburst true
 fudge 127.127.22.0 refid kPPS
 
