--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -89,8 +89,10 @@ filegen clockstats file clockstats type day enable
 # peer commands.
 
 ###############################################################################
-# Time sources
+# Remote Time sources
 ###############################################################################
+
+# Google Time Servers
 server time1.google.com iburst prefer preempt noselect
 server time2.google.com iburst prefer preempt noselect
 server time3.google.com iburst prefer preempt noselect
