Add local time source as option for ntpd

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -98,8 +98,15 @@ server time2.google.com iburst prefer preempt noselect
 server time3.google.com iburst prefer preempt noselect
 server time4.google.com iburst prefer preempt noselect
 
-# Kernel-mode PPS reference-clock for the precise seconds
-#
+
+###############################################################################
+# Local time sources
+###############################################################################
+
+# Local clock
+server 127.127.1.0
+fudge 127.127.1.0 stratum 10
+
 # Note: when using the ATOM (type 22) refclock, one of the other
 # servers must be marked as prefer.  This is because the type 22 clock only
 # supplies the timing within the second, and another server is required to
