explicit logfile as stdout

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -34,6 +34,7 @@ leapfile /usr/share/zoneinfo/leap-seconds.list
 # Log file
 # commented out so that we get logs to $STDOUT
 #logfile /var/log/ntp.log
+logfile /dev/stdout
 
 # Statistics Directory
 statsdir /var/log/ntp/
