--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -3,6 +3,8 @@
 #   NTPd Configuration File
 #
 ###############################################################################
+interface listen all
+
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
 # details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
 # might also be helpful.
