Other time sources for stats

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -101,6 +101,11 @@ server time2.google.com iburst prefer preempt noselect
 server time3.google.com iburst prefer preempt noselect
 server time4.google.com iburst prefer preempt noselect
 
+# CloudFlare Time Servers (Anycast)
+server time.cloudflare.com iburst prefer preempt noselect
+
+# Facebook Time Servers
+server time.facebook.com iburst preempt noselect
 
 ###############################################################################
 # Local time sources
