--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,5 @@
 #GPS_DEVICE: Set to your GPS device. Typically /dev/ttyACM0 or /dev/ttyAMA0
-GPS_DEVICE=
+GPS_DEVICE=""
+
+# Enter your TZ database format time zone
+TZ=""
