--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 #GPS_DEVICE: Set to your GPS device. Typically /dev/ttyACM0 or /dev/ttyAMA0
-GPS_DEVICE=/dev/ttyACM0
+GPS_DEVICE="/dev/ttyACM0"
+
+# Enter your TZ database format time zone
+TZ="America/Los_Angeles"
