--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -14,8 +14,11 @@ interface listen all
 # up blocking replies from your own upstream servers.
 
 # By default, exchange time with everybody, but don't allow configuration.
-restrict -4 default kod notrap nomodify nopeer noquery limited
-restrict -6 default kod notrap nomodify nopeer noquery limited
+#restrict -4 default kod notrap nomodify nopeer noquery limited
+#restrict -6 default kod notrap nomodify nopeer noquery limited
+restrict -4 default kod notrap nomodify nopeer noquery
+restrict -6 default kod notrap nomodify nopeer noquery
+
 
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
