Update ntpd conf

--- a/rootfs/etc/ntp.conf
+++ b/rootfs/etc/ntp.conf
@@ -98,13 +98,13 @@ filegen clockstats file clockstats type day enable
 ###############################################################################
 
 # Google Time Servers
-server time1.google.com iburst prefer preempt noselect
-server time2.google.com iburst prefer preempt noselect
-server time3.google.com iburst prefer preempt noselect
-server time4.google.com iburst prefer preempt noselect
+server time1.google.com iburst preempt noselect
+server time2.google.com iburst preempt noselect
+server time3.google.com iburst preempt noselect
+server time4.google.com iburst preempt noselect
 
 # CloudFlare Time Servers (Anycast)
-server time.cloudflare.com iburst prefer preempt noselect
+server time.cloudflare.com iburst preempt noselect
 
 # Facebook Time Servers
 server time.facebook.com iburst preempt noselect
@@ -114,7 +114,7 @@ server time.facebook.com iburst preempt noselect
 ###############################################################################
 
 # Local clock
-server 127.127.1.0
+server 127.127.1.0 minpoll 4 maxpoll 4 iburst true
 fudge 127.127.1.0 stratum 10
 
 # Note: when using the ATOM (type 22) refclock, one of the other
